frontend/src/css/Dashboard.css
.container {
    display: flex;
  }
  .sidebar-menu a {
    text-decoration: none;    
    padding: 7px 0px;
    color: #545454;
    cursor: pointer;
    margin: 10px 0px;
         
  }
  
  
  .sidebar-menu a.active {
    background-color: #5584f6;
    border-radius: 0.000001em;
    color: #ffffff;
  }

  
  .content {
    flex: 1;
    margin-left: 250px; 
    padding: 20px;
    background-color: #eef4f9;
  }
 
  .dashboard {
    padding: 24px;
    background-color: #0b1425;
    min-height: 100vh;
  }
  

  .pie-chart-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  
  h3 {
    font-size: 20px;
    margin-bottom: 10px;
  }
  
  .recharts-legend-item {
    display: flex;
    align-items: center;
    font-size: 14px;
  }
  
  .row {
    display: flex;
    justify-content: space-between; 
    gap: 10px; 
    padding: 20px;
    
  }
  
 

